Suggestions from Tony
Still need to do the larger comments

--- a/02-Methods.Rmd
+++ b/02-Methods.Rmd
@@ -89,14 +89,14 @@ shapeit2 \
 
 #### PopGenome {#popgenomeMethods}
 
-The PopGenome package (v2.2.3, @Pfeifer2014) for R was used for the calculation of \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. The selection and neutrality statistics were calculated using a sliding window approach with a window size of 100 kb and a slide of 10 kb. Windows that had fewer than four segregating sites were filtered out, and window co-ordinates were altered to be +/- 5 kb from the centre of the window. The empirical distribution for each statistic, for each population, was used to create a significance threshold. The lower threshold was min(1^st^ percentile, 0). The upper significance threshold was max(99^th^ percentile, 0). The greater or less than zero condition was to enable the interpretation of the selection and neutrality statistic results, as zero is the point at which these statistics indicate an excess or deficit of a particular allele frequency category. F~ST~ was also calculated in the same sliding window setup, and pair-wise for between the Polynesian populations, and also the other populations. Negative F~ST~ values were set to 0, because they are biologically impossible.
+The PopGenome package (v2.2.3, @Pfeifer2014) for R was used for the calculation of \gls{td}, \gls{fwh}, \gls{flf}, and \gls{ze}. The selection and neutrality statistics were calculated using a sliding window approach with a window size of 100 kb and a slide of 10 kb. Windows that had fewer than four segregating sites were filtered out, and window co-ordinates were altered to be +/- 5 kb from the centre of the window. The empirical distribution for each statistic, for each population, was used to create a significance threshold. The lower threshold was min(1^st^ percentile, 0). The upper significance threshold was max(99^th^ percentile, 0). The greater or less than zero condition was to enable the interpretation of the selection and neutrality statistic results, as zero is the point at which these statistics indicate an excess or deficit of a particular allele frequency category. F~ST~ was also calculated in the same sliding window setup, and pair-wise between the Polynesian populations, and also the other populations. Negative F~ST~ values were set to 0, because they are biologically impossible.
 
 The ancestral allele was used as annotated in the 1000 Genomes Phase 3 \gls{vcf} file where possible for use as the out-group population. A new sample identified as 'Ancestor' was included in the phased \gls{vcf}, and for each marker the genotype for this sample was set as the homozygote for either the reference or alternate allele, dependent on the ancestral allele matching, otherwise the Ancestor genotype was set to missing. When the phased \gls{vcf} files were loaded into PopGenome, populations were identified using panel files which were white-space delimited files with sample id, population, and super population as the columns. The out-group population for \gls{fwh} was set to be that of the Ancestor sample so that the ancestral allele would be used in the calculation.
 
 
 #### SelectionTools {#selectionTools}
 
-SelectionTools v1.1 [@Cadzow2014] was used to generate the haplotypic selection statistics of \gls{ihs}, \gls{nsl}, and \gls{xpehh}. The combined population phased \gls{vcf} file was split into individual populations. Within each population, markers were filtered for a \gls{maf} of > 0.01 and a \gls{hwe} exact test of P < 10^-6^ [@Wigginton2005]. Markers were converted into "ancestral" or "derived" by comparing alleles to the homo sapiens ancestral fasta (see Table \@ref(tab:refDatasets)) with alleles that matched the ancestor set to 0, and non-missing, non-matching alleles set to 1.
+SelectionTools v1.1 [@Cadzow2014] was used to generate the haplotypic selection statistics of \gls{ihs}, \gls{nsl}, and \gls{xpehh}. The combined population phased \gls{vcf} file was split into individual populations. Within each population, markers were filtered for a \gls{maf} of > 0.01 and a \gls{hwe} exact test of P > 10^-6^ [@Wigginton2005]. Markers were converted into "ancestral" or "derived" by comparing alleles to the homo sapiens ancestral fasta (see Table \@ref(tab:refDatasets)) with alleles that matched the ancestor set to 0, and non-missing, non-matching alleles set to 1.
 
 \gls{ihs}, \gls{nsl}, and \gls{xpehh} normalisation with frequency bins of 0.05 was done using _norm_ as part of selscan v1.1.0b [@Szpiech2014]. Markers with an \gls{ihs}, \gls{nsl} or \gls{xpehh} value > |2.6| met the threshold for significance, which was equivalent to approximately 1% of the most extreme values.
 
@@ -161,9 +161,9 @@ Gene
 
 ### Disease associated gene Lists {#diseaselist}
 
-In order to create lists of genes that were associated with urate, gout, obesity, \gls{t2d}, metabolic syndrome, and kidney disease. Disease trait entries were downloaded from the \gls{gwas} catalog^[gwas_catalog_v1.0.1-associations_e89_r2017-06-19.tsv https://www.ebi.ac.uk/gwas/ accessed 19 June 2017] [@MacArthur2017]. Entries were then filtered for P < 5x10^-8^. From the filtered results, the kidney disease gene list was created by filtering the "disease trait" column to select rows with the keywords "kidney" or "renal". Entries were then removed that had the keywords "transplant", "carcinoma", "Type", "stones", "gout", "related", or "Diabetic kidney disease". For the gout, urate, obesity, \gls{t2d}, and metabolic syndrome gene lists the following keywords were used on the "disease trait" column to select rows of the P-value filtered data: "metabolic syndrome", "obesity", "diabetes", "urate", "gout", "body mass", and "lipid traits". This subset was then filtered to remove rows containing these keywords in the "disease trait" column: "child", "erectile", "lean", "autoantibodies", "gestational", "cancer", "psychopharmacol", "metaformin", "metformin", "obstructive", "interaction", "asthmatics", "omega", "pain", "cataracts", "time", "bilirubin", "chain", "thyroid", "zhi", "Type 1", or "cystic". From this filtered data, keywords were used to select rows relating to each trait of interest from the "disease trait" column. Gout and urate used The keywords "urate" and "gout" were used for gout and urate, "obesity" and "body mass" used for obesity, "diabetes" used for \gls{t2d}, and "syndrome" used for metabolic syndrome. The keywords "kidney" and "renal" were used for kidney disease with entries removed that had keywords of "transplant", "carcinoma","type", "stones","gout", "related", and "Diabetic kidney disease". 
+In order to create lists of genes that were associated with urate, gout, obesity, \gls{t2d}, metabolic syndrome, and kidney disease, disease trait entries were downloaded from the \gls{gwas} catalog^[gwas_catalog_v1.0.1-associations_e89_r2017-06-19.tsv https://www.ebi.ac.uk/gwas/ accessed 19 June 2017] [@MacArthur2017]. Entries were then filtered for P < 5x10^-8^. From the filtered results, the kidney disease gene list was created by filtering the "disease trait" column to select rows with the keywords "kidney" or "renal". Entries were then removed that had the keywords "transplant", "carcinoma", "Type", "stones", "gout", "related", or "Diabetic kidney disease". For the gout, urate, obesity, \gls{t2d}, and metabolic syndrome gene lists the following keywords were used on the "disease trait" column to select rows of the P-value filtered data: "metabolic syndrome", "obesity", "diabetes", "urate", "gout", "body mass", and "lipid traits". This subset was then filtered to remove rows containing these keywords in the "disease trait" column: "child", "erectile", "lean", "autoantibodies", "gestational", "cancer", "psychopharmacol", "metaformin", "metformin", "obstructive", "interaction", "asthmatics", "omega", "pain", "cataracts", "time", "bilirubin", "chain", "thyroid", "zhi", "Type 1", or "cystic". From this filtered data, keywords were used to select rows relating to each trait of interest from the "disease trait" column. Gout and urate used The keywords "urate" and "gout" were used for gout and urate, "obesity" and "body mass" used for obesity, "diabetes" used for \gls{t2d}, and "syndrome" used for metabolic syndrome. The keywords "kidney" and "renal" were used for kidney disease with entries removed that had keywords of "transplant", "carcinoma","type", "stones","gout", "related", and "Diabetic kidney disease". 
 
-Additional gene lists were created for malaria, auto immune and auto inflammatory diseases, and neurological diseases. The keyword "malaria" was used to filter the disease trait column to create the malaria gene list. The auto immune and auto inflammatory gene list was based on diseases that were listed in Table 2 of @Zhang2013a. The following keywords were filtered for in the disease trait column: "Crohn's disease", 'Celiac disease', "Ulcerative colitis", "Inflammatory bowel disease", "Type 1 diabetes", "Rheumatoid arthritis", "Multiple sclerosis", "Psoriasis", "Systemic lupus erythematosus", "Primary biliary cirrhosis", and "Vitiligo". Finally, a gene list for genes associated with neurological diseases was created by filtering the disease trait column for the keywords "Parkinson's disease" and "Alzheimer's disease". All keyword matching was case-insensitive. The code used for the creation of the gene lists is found in Appendix \@ref(gwascatlist). A list of the traits for each category can be found in Table \@ref(tab:gwascatref) and a list of the genes and what category they are from is in Table \@ref(tab:gwasgenes). 
+Additional gene lists were created for malaria, auto-immune and auto-inflammatory diseases, and neurological diseases. The keyword "malaria" was used to filter the disease trait column to create the malaria gene list. The auto-immune and auto-inflammatory gene list was based on diseases that were listed in Table 2 of @Zhang2013a. The following keywords were filtered for in the disease trait column: "Crohn's disease", 'Celiac disease', "Ulcerative colitis", "Inflammatory bowel disease", "Type 1 diabetes", "Rheumatoid arthritis", "Multiple sclerosis", "Psoriasis", "Systemic lupus erythematosus", "Primary biliary cirrhosis", and "Vitiligo". Finally, a gene list for genes associated with neurological diseases was created by filtering the disease trait column for the keywords "Parkinson's disease" and "Alzheimer's disease". All keyword matching was case-insensitive. The code used for the creation of the gene lists is found in Appendix \@ref(gwascatlist). A list of the traits for each category can be found in Table \@ref(tab:gwascatref) and a list of the genes and what category they are from is in Table \@ref(tab:gwasgenes). 
 
 
 ```{r markdown2, eval = FALSE, include = FALSE}
@@ -234,7 +234,7 @@ smartpca.perl \
 
 Admixture arises when two populations that were previously separate, begin to interbreed, changing the allele frequencies in the new population [\@ref]. Genetic admixture analysis estimates the proportions and the variant frequencies of the ancestral populations that contributed to the admixture. This is often done to account for population structure in \gls{gwas} studies.
 
-Admixture analysis was performed using ADMIXTURE v1.3.0 [@Alexander2009]. \gls{vcf} files for all autosomes were concatenated and the independent markers were selected by a moving window of 50 kbp sliding by 10 markers and removing markers with a marker \gls{ld} R^2^ > 0.1. This was done using Plink v1.9b4.9. Following this, cross validation was performed to find the best value of K (number of ancestral populations), for values of K from 1 to 15. K = 11 had the lowest cross-validation error (Table \@ref(tab:admixCV)). The default of 5-fold cross-validation was used, where-by the data was partitioned into five groups, with four used to train the model, and the fifth to test the model. This was repeated five times, using a different combination of the partitions each iteration. The following code was used to calculate the cross-validation errors.
+Admixture analysis was performed using ADMIXTURE v1.3.0 [@Alexander2009]. \gls{vcf} files for all autosomes were concatenated and the independent markers were selected by a moving window of 50 kbp sliding by 10 markers and removing markers with a marker \gls{ld} R^2^ > 0.1. This was done using Plink v1.9b4.9. Following this, cross validation was performed to find the best value of K (number of ancestral populations), for values of K from 1 to 15. K = 11 had the lowest cross-validation error (Table \@ref(tab:admixCV)). The default of 5-fold cross-validation was used, where-by the data were partitioned into five groups, with four used to train the model, and the fifth to test the model. This was repeated five times, using a different combination of the partitions each iteration. The following code was used to calculate the cross-validation errors.
 
 ```{r admixture k, engine = 'bash', eval = FALSE}
 # Combine the chromosomes
@@ -325,7 +325,7 @@ admixture -s 123456 -P study.bed 9
 
 Heritability analysis is a method for determining what proportion of phenotypic variation can be attributed to environmental effects (non-heritable) and genetic effects (heritable) [@Visscher2008]. There are two measures of heritability, the first is known as broad-sense heritability (H^2^) and is the ratio of the total genetic variance to the total phenotypic variance. The second measure is narrow-sense heritability (h^2^) and is the ratio of the genetic variance attributed to an additive genetic model to the total genetic variance.
 
-The \gls{gcta} v1.26.0 [@Yang2011; @Yang2011part] was used to calculate the proportion of genetic heritability explained for gout. First the UK Biobank genetic data (section \@ref(ukbbdata)) was subsetted to only contain gout cases and controls and the genome partitioned into chromosomes. A \gls{grm} was created for each chromosome. The genetic variance explained was calculated for each chromosome using restricted maximum likelihood analysis and a general population prevalence for gout of 2%. The following code was used to calculate the \gls{grm} and partition the genetic heritability by chromosome.
+The \gls{gcta} v1.26.0 [@Yang2011; @Yang2011part] was used to calculate the proportion of genetic heritability explained for gout. First the UK Biobank genetic data (section \@ref(ukbbdata)) were subsetted to only contain gout cases and controls and the genome partitioned into chromosomes. A \gls{grm} was created for each chromosome. The genetic variance explained was calculated for each chromosome using restricted maximum likelihood analysis and a general population prevalence for gout of 2%. The following code was used to calculate the \gls{grm} and partition the genetic heritability by chromosome.
 
 
 ```{r, engine='bash', eval=FALSE}
@@ -419,7 +419,7 @@ urldate = {2015-08-18}
 }
 -->
 
-The \glsdesc{1kgp} was an international consortium that was established in 2007 to provide a comprehensive record of human genetic variation. The project consisted of three main data phases. A pilot phase that whole-genome sequenced 179 individuals from four populations at low coverage (2-4x), along with high coverage sequencing for two trios (mother, father, and child), and exon targeted sequencing for 697 individuals from seven populations [@1KGP2010]. The second main data phase provided sequencing data for 1092 individuals from 14 populations. This sequencing data was a combination of low coverage whole-genome and exon sequencing [@1KGP2012]. The third main phase (Phase 3) was a dataset consisting of low coverage whole-genome sequencing, deep exome sequencing, and dense \gls{snp} array genotyping for 2504 individuals from 26 populations [@1KGP2015snp]. The 1000 Genomes data set used in this thesis in the Phase 3 release^[ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/ accessed 20 March 2017].
+The \glsdesc{1kgp} was an international consortium that was established in 2007 to provide a comprehensive record of human genetic variation. The project consisted of three main data phases. A pilot phase that whole-genome sequenced 179 individuals from four populations at low coverage (2-4x), along with high coverage sequencing for two trios (mother, father, and child), and exon targeted sequencing for 697 individuals from seven populations [@1KGP2010]. The second main data phase provided sequencing data for 1092 individuals from 14 populations. This sequencing data set was a combination of low coverage whole-genome and exon sequencing [@1KGP2012]. The third main phase (Phase 3) was a dataset consisting of low coverage whole-genome sequencing, deep exome sequencing, and dense \gls{snp} array genotyping for 2504 individuals from 26 populations [@1KGP2015snp]. The 1000 Genomes data set used in this thesis was the Phase 3 release^[ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/ accessed 20 March 2017].
 
 
 ```{r populations, results = 'asis', echo = FALSE}
@@ -430,7 +430,7 @@ read.csv('data/02-populations.csv', stringsAsFactors = FALSE) %>% left_join(., p
 
 ### Genetics of Gout in Aotearoa study
 
-The genetics of Gout in Aotearoa study is a case-control cohort for gout, with recruitment mainly from the Auckland, Wellington, Christchurch and Dunedin regions of New Zealand. Participants were asked to fill in a questionnaire regarding demographic information, clinical information, and food consumption at the time of recruitment. Gout cases fulfilled the American College of Rheumatology criteria [@Wallace1977a]. Controls self-reported no history of gout at the time of recruitment. All individuals gave written informed consent and ethical approval was obtained from the New Zealand multi-region ethics committee (MEC/105/10/130). Individuals from this study were genotyped on Illumina CoreExome v24 \gls{snp} arrays using DNA extracted from blood samples provided at the time of recruitment. Table \@ref(tab:clinInfoCE) provides the overall clinical characteristics for this cohort. 
+The genetics of Gout in Aotearoa study is a case-control cohort for gout, with recruitment mainly from the Auckland, Wellington, Christchurch and Dunedin regions of New Zealand. Participants were asked to fill in a questionnaire regarding demographic information, clinical information, and gout relevant food consumption at the time of recruitment. Gout cases fulfilled the \gls{acr} criteria [@Wallace1977a]. Controls self-reported no history of gout at the time of recruitment. All individuals gave written informed consent and ethical approval was obtained from the New Zealand multi-region ethics committee (MEC/105/10/130). Individuals from this study were genotyped on Illumina CoreExome v24 \gls{snp} arrays using DNA extracted from blood samples provided at the time of recruitment. Table \@ref(tab:clinInfoCE) provides the overall clinical characteristics for this cohort.
 
 A subset of the individuals from this study were used to form four populations of Polynesian ancestry, two for East Polynesia (\gls{cim} and \gls{nzm}), and two for West Polynesia (\gls{sam} and \gls{ton}), and one population of European ancestry (\gls{nzc}). These sub-populations formed part of the selection analysis dataset described in section \@ref(selectionDataset)). 
 
@@ -481,10 +481,12 @@ Mean grandparent ancestry is the proportion of grandparents self-reported as bel
 ```
 #### CoreExome {#coreExomeQC}
 
-The Infinium CoreExome-24 bead-chip is a genotyping platform available from Illumina and is comprised of a core set of 551,839 markers. Genotyping quality control was performed by Dr Tanya Major (Merriman Lab) following the protocol from @Guo2014 and the Illumina GenomeStudio best practice guidelines. Illumina’s GenomeStudio v2011.1 genotyping module v1.9.4 was used for the initial calling of genotypes. Samples were exported from Genome Studio that had a call rate > 98%, markers were removed if the call-rate was < 95%. Individuals who had not reported their sex were assigned their genetic sex where possible. Individuals were removed where genetic and reported sex did not match. The cohort was checked for genotype consistency between duplicated markers, with duplicates subsequently removed. 
+
+The Infinium CoreExome-24 bead-chip is a genotyping platform available from Illumina and is comprised of a core set of 551,839 markers. A subset of the individuals in the Genetics of Gout in Aotearoa study were genoytped on this platform at the University of Queensland (Centre for Clinical Genomics). Genotyping quality control was performed by Dr Tanya Major (Merriman Lab) following the protocol from @Guo2014 and the Illumina GenomeStudio best practice guidelines [\@ref]. Illumina’s GenomeStudio v2011.1 genotyping module v1.9.4 was used for the initial calling of genotypes. Samples were exported from GenomeStudio that had a call rate > 98%, markers were removed if the call-rate was < 95%. Individuals who had not reported their sex were assigned their genetic sex where possible. Individuals were removed where genetic and reported sex did not match. The cohort was checked for genotype consistency between duplicated markers, with duplicates subsequently removed. 
 <!-- Samples were also checked for outliers in heterozygosity and depression of genetic variation. -->
 
-Markers were subsetted to only include bi-allelic \glspl{snp}, with a final marker number of `r NROW(markers)` and density of `r lapply(1:22, function(x){diff(markers %>% filter(chrom ==x) %>% arrange(chrom_start) %>% pull(chrom_start))}) %>% unlist() %>% mean() %>% round_dp(., 0)` bp/marker. Relatedness between individuals was assessed through inheritance by state using Plink v1.9b3.32 and a pedigree of families created by Dr Tanya Major (Merriman lab) to identify family groups. Duplicates and first degree relations were excluded and single individuals were randomly selected from family groups identified through identity by state analysis, which determined the proportions of individual genomes that were identical in a pair-wise manner. \Glsdesc{hwe} of markers was checked for European, East Polynesian, and West Polynesian populations . Ethnicity was determined 3 or more grandparents self reported ethnicity) using a \gls{hwe} exact test [@Wigginton2005] in Plink v1.9b3.32, and variants were removed if they had a Bonferroni multiple testing corrected P < 0.05. The genetic ancestry, determined through \gls{pca} (section \@ref(pca)), was compared with self reported ethnicity and individuals were removed where there was disagreement.
+Markers were subsetted to only include bi-allelic \glspl{snp}, with a final marker number of `r NROW(markers)` and density of `r lapply(1:22, function(x){diff(markers %>% filter(chrom ==x) %>% arrange(chrom_start) %>% pull(chrom_start))}) %>% unlist() %>% mean() %>% round_dp(., 0)` bp/marker. Relatedness between individuals was assessed through inheritance by state using Plink v1.9b3.32 and a pedigree of families created by Dr Tanya Major (Merriman lab) to identify family groups. Duplicates and first degree relations were excluded and single individuals were randomly selected from family groups identified through identity by state analysis, which determined the proportions of individual genomes that were identical in a pair-wise manner. 
+In order to account for population specific genetic differences, self-report of grandparent ethnicity was used to infer the genetic ancestral populations from clusters of individuals after plotting different \glspl{pc} from the \gls{pca} on the genetic markers (section \@ref(pca)). Individuals were removed from further analysis where there was disagreement between self-reported grandparent ethnicity and the inferred genetic ancestry. \Glsdesc{hwe} of markers was checked for European, East Polynesian, and West Polynesian populations using a \gls{hwe} exact test [@Wigginton2005] in Plink v1.9b3.32, and variants were removed if they had a Bonferroni multiple testing corrected P < 0.05.
 
 
 
@@ -550,9 +552,9 @@ ce_pop_table <- ce_populations_table()
 
 #### Sample selection
 
-\Glsentrydescplural{pc} were calculated for all individuals genotyped on the coreExome \gls{snp} array using SmartPCA (EIGENSOFT v6.0.1, see section \@ref(pca)) using 2858 ancestry informative markers (@Guo2014 supplementary material). The first 10 eigenvectors were outputted, with no outlier removal or population size limit. Individuals were removed who did not match between self reported ethnicity of grandparents and their genetic ancestry, or if they had self reported their ethnicity as unknown.
+\Glsentrydescplural{pc} were calculated for all individuals genotyped on the coreExome \gls{snp} array using SmartPCA (EIGENSOFT v6.0.1, see section \@ref(pca)) using 2858 ancestry informative markers (@Guo2014 supplementary material). The first 10 eigenvectors were outputted, with no outlier removal or population size limit. Individuals were removed who did not match between self reported ethnicity of grandparents and their genetic ancestry, or if they had self reported all grandparent ethnicities as unknown.
 
-\Glsdesc{pc} 2 was identified as providing the best separation of European ancestry from Polynesian ancestry, and \gls{pc} 4 had the best separation of East Polynesian from West Polynesian populations. Individuals were then filtered for European or Polynesian ancestry. Individuals reporting 4 grandparents of Caucasian, New Zealand M\tex{\={a}}ori, Cook Island M\tex{\={a}}ori, Samoan, and Tongan ancestry were used to define the threshold values. The mean and SD for \gls{pc} 2 and \gls{pc} 4 were calculated for the individuals who had self reported four grandparents of the same ethnicity. Thresholds were then applied using the four grandparent population mean $\pm$ 2 SD for \gls{pc} 2 and \gls{pc} 4 for each corresponding self-report population group. Samples were filtered so that only those that lay within the thresholds remained. Population samples of 100 individuals were created by using genetic ancestry for the following populations: \glsdesc{nzm}, \glsdesc{cim}, \glsdesc{sam}, \glsdesc{ton}, and \glsdesc{nzc}, by randomly sampling from within each ancestry group (Figure \@ref(fig:cePCA)). To create a population sample that resembled the general population for gout prevalence, individuals were prioritised based on gout affection to reach population specific prevalences based on @Winnard2013 of 2.3% for \gls{nzc}, 7.7% for \gls{nzm}, and 8.6% for \gls{cim}, \gls{sam}, and \gls{ton}. Final sample population prevalence of 2.0% (\gls{nzc}), 7.0% (\gls{nzm}), 45.0% (\gls{cim}), 12.0% (\gls{sam}), and 54.0% (\gls{ton}) were obtained (Table \@ref(tab:cePopTable)).
+\Glsdesc{pc} 2 was identified as providing the best separation of European ancestry from Polynesian ancestry, and \gls{pc} 4 had the best separation of East Polynesian from West Polynesian populations. Individuals were then filtered for European or Polynesian ancestry. Individuals reporting 4 grandparents of European, New Zealand M\tex{\={a}}ori, Cook Island M\tex{\={a}}ori, Samoan, and Tongan ancestry were used to define the threshold values, as they were most likely to represent the ancestral populations. The mean and SD for \gls{pc} 2 and \gls{pc} 4 were calculated for the individuals who had self reported four grandparents of the same ethnicity. Thresholds were then applied using the four grandparent population mean $\pm$ 2 SD for \gls{pc} 2 and \gls{pc} 4 for each corresponding self-report population group. Samples were filtered so that only those that lay within the thresholds remained. Population samples of 100 individuals were created by using genetic ancestry for the following populations: \glsdesc{nzm}, \glsdesc{cim}, \glsdesc{sam}, \glsdesc{ton}, and \glsdesc{nzc}, by randomly sampling from within each ancestry group (Figure \@ref(fig:cePCA)). To create a population sample that resembled the general population for gout prevalence, individuals were prioritised based on gout affection to reach population specific prevalences based on @Winnard2013 of 2.3% for \gls{nzc}, 7.7% for \gls{nzm}, and 8.6% for \gls{cim}, \gls{sam}, and \gls{ton}. Final sample population prevalence of 2.0% (\gls{nzc}), 7.0% (\gls{nzm}), 45.0% (\gls{cim}), 12.0% (\gls{sam}), and 54.0% (\gls{ton}) were obtained (Table \@ref(tab:cePopTable)).
 
 
 ```{r,echo = FALSE}
@@ -570,7 +572,7 @@ knitr::include_graphics('images/02_methods/pca_plot.png')
 
 #### Filter individuals and markers 
 
-To create a data set from which to calculate selection statistics, the subset of the Genetics of Aotearoa individuals genotyped on the Illumina CoreExome chip were combined with all of the individuals in the \gls{1kgp} phase 3 release. This was done in order to have a common set of markers between all populations, making the populations comparable. Before the data sets could be combined there were a series of steps that were performed. The first step (code following) was to keep only the individuals who had been selected through \gls{pca} and had a genotyping rate of at least 95%. Markers were filtered to remove \glspl{indel} so that only \glspl{snp} remained.
+To create a data set from which to calculate selection statistics, the subset of the Genetics of Aotearoa individuals genotyped on the Illumina CoreExome chip were combined with all of the individuals in the \gls{1kgp} phase 3 release. This was done in order to have a common set of markers between all populations, making the populations comparable. Before the data sets could be combined there were a series of steps that were performed. The first step (code following) was to keep only the individuals who had been selected through \gls{pca} and had a genotyping rate of at least 95%. Due to software requirements, markers were filtered to remove \glspl{indel} so that only \glspl{snp} remained.
 
 ```{r, engine = 'bash', eval = FALSE}
 parallel '
@@ -610,7 +612,7 @@ After normalisation, the \gls{vcf} files were phased using the 1000 Genomes Proj
 
 #### Merge genotypes
 
-In order to efficiently merge the data sets, the intersection of the markers from the \gls{1kgp} dataset and the CoreExome was found. This was done by extracting the marker positions and alleles from the coreExome data and then matching these to the marker positions extracted from the \gls{1kgp} phase 3. The \gls{1kgp} phase 3 markers were also filtered to remove non bi-allelic \glspl{snp}. The following code demonstrates these steps.
+In order to efficiently merge the data sets, the intersection of the markers from the \gls{1kgp} dataset and the CoreExome dataset was found. This was done by extracting the marker positions and alleles from the CoreExome data and then matching these to the marker positions extracted from the \gls{1kgp} phase 3. The \gls{1kgp} phase 3 markers were also filtered to remove non bi-allelic \glspl{snp}. The following code demonstrates these steps.
 
 ```{r, engine = 'bash', eval = FALSE}
 # extract markers from core exome
@@ -635,7 +637,7 @@ parallel '
 ```
 
 
-An R script (below) was created in order to merge the two marker lists based on chromosome position and the reference and alternate alleles 
+An R script (below) was created in order to merge the two marker lists based on chromosome position and the reference and alternate alleles. 
 
 ```{r, eval=FALSE}
 # create list of markers present in CoreExome data
